# agent-core

./: Dockerfile  README.md  app.py  gwtest.py  lambda_function.py  openAPI_schema.json  pyproject.toml  report.md  streamlit_api.py
src/vacation_planner/: crew.py  main.py
src/vacation_planner/config/: agents.yaml  tasks.yaml
